Layout issues fixed on desktop and mobile

--- a/style.css
+++ b/style.css
@@ -2,16 +2,16 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 .container {
   width: 100%;
   max-width: 100%;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px 0px;
   display: flex;
   flex-direction: column;
+
 }
 
 .intro-banner {
@@ -41,13 +41,13 @@ body {
 .about {
   display: flex;
   align-items: center;
-  padding:  24px 32px;
+  padding:  24px 0px;
   width: 100%;
   background-color: #ffffff;
 }
 
 .about-text {
-  margin-right: 110px;
+  margin-right: 70px;
 }
 
 .profile-pic img {
@@ -57,7 +57,7 @@ body {
   object-position: 45% center;
   border-radius: 50%;
   border: 2px solid black;
-  margin-left: 48px;
+  margin-left: 70px;
   margin-right: 24px;
   box-shadow: 0 0 50px rgba(138, 124, 124, 0.681);
 }
@@ -74,6 +74,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border: 0px solid black;
+  box-sizing: border-box;
   border: 2px solid black;
   width: 100%;
   height: 100%;
@@ -100,6 +102,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  text-align: center;
 }
 
 .box {
@@ -117,5 +120,45 @@ body {
   background-color: rgb(4, 4, 99);
   flex-grow: 1;
   display: flex;
-  height: 130px;
+  height: 100px;
+}
+
+@media (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .about {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .about-text {
+    margin: 0;
+    max-width: 100%;
+    padding: 0px 10px;
+  }
+
+  .profile-pic img {
+    margin: 0 0 16px 0;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  .grid-item {
+    height: 200px;
+  }
+
+  /* Zoom basketball image and ensure layout is unaffected on mobile */
+  .grid-item {
+    overflow: hidden;
+  }
+  .grid-item img {
+    object-position: center;
+    transform: scale(1.6);
+  }
 }
